Correctly collapse tooltip callout

--- a/publish.css
+++ b/publish.css
@@ -3406,7 +3406,7 @@ body {
   box-shadow: 0 2px 8px var(--background-modifier-box-shadow);
   background-color: var(--background-modifier-message);
   border-radius: var(--radius-s);
-  color: #FAFAFA;
+  color: #fafafa;
   font-size: var(--font-ui-smaller);
   font-weight: var(--font-medium);
   line-height: var(--line-height-tight);
@@ -3414,7 +3414,6 @@ body {
   padding: 4px 8px;
   text-align: center;
   z-index: var(--layer-tooltip);
-  pointer-events: none;
   display: none;
 }
 .callout[data-callout=tooltip]:hover .callout-title {
@@ -3432,6 +3431,10 @@ body {
 }
 .callout[data-callout=tooltip] .callout-content > :plast-child {
   margin-bottom: 0;
+}
+.callout[data-callout=tooltip].is-collapsed .callout-title {
+  position: static;
+  display: flex;
 }
 
 body {
