--- a/scss/editor/callouts/_callout-tooltip.scss
+++ b/scss/editor/callouts/_callout-tooltip.scss
@@ -1,5 +1,4 @@
 .callout[data-callout="tooltip"] {
-
     border: none;
     background: none;
     width: fit-content;
@@ -9,12 +8,12 @@
         position: absolute;
         right: calc(var(--size-4-2) + var(--image-shadow-offset, 0px));
         top: var(--size-4-2);
-        
+
         border: none;
         box-shadow: 0 2px 8px var(--background-modifier-box-shadow);
         background-color: var(--background-modifier-message);
         border-radius: var(--radius-s);
-        color: #FAFAFA;
+        color: #fafafa;
         font-size: var(--font-ui-smaller);
         font-weight: var(--font-medium);
         line-height: var(--line-height-tight);
@@ -22,7 +21,6 @@
         padding: 4px 8px;
         text-align: center;
         z-index: var(--layer-tooltip);
-        pointer-events: none;
         display: none;
     }
 
@@ -46,4 +44,8 @@
         margin-bottom: 0;
     }
 
+    &.is-collapsed .callout-title {
+        position: static;
+        display: flex;
+    }
 }
