--- a/snippets/editor/callouts/callout-tooltip.css
+++ b/snippets/editor/callouts/callout-tooltip.css
@@ -16,7 +16,7 @@ Author: ElsaTam (Kapirklaa in Discord)
   box-shadow: 0 2px 8px var(--background-modifier-box-shadow);
   background-color: var(--background-modifier-message);
   border-radius: var(--radius-s);
-  color: #FAFAFA;
+  color: #fafafa;
   font-size: var(--font-ui-smaller);
   font-weight: var(--font-medium);
   line-height: var(--line-height-tight);
@@ -24,7 +24,6 @@ Author: ElsaTam (Kapirklaa in Discord)
   padding: 4px 8px;
   text-align: center;
   z-index: var(--layer-tooltip);
-  pointer-events: none;
   display: none;
 }
 .callout[data-callout=tooltip]:hover .callout-title {
@@ -42,6 +41,10 @@ Author: ElsaTam (Kapirklaa in Discord)
 }
 .callout[data-callout=tooltip] .callout-content > :plast-child {
   margin-bottom: 0;
+}
+.callout[data-callout=tooltip].is-collapsed .callout-title {
+  position: static;
+  display: flex;
 }
 
 .callout[data-callout=tooltip] {
